removed the jekyll-sitemap gem (broken for some reason) added a cusotm sitemap

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: post-index
 title: "bytel00m blog"
 description: "dev & other stuff"
 comments: false
+sitemap:
+  priority: 1.0
 ---
 
 {% for post in paginator.posts %}
